<resources>
    <string name="app_name">Movie KataLoeGue41</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mr. Reviewer</string>
    <string name="nav_header_subtitle">reviewer@dicoding.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_movies">Movies</string>
    <string name="title_tv_show">Tv Show</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info">Info</string>
    <string name="menu_language">Language</string>
    <string name="menu_about">About</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Something</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="background_poster">Background Poster</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="textview">TextView</string>
    <string name="more">More</string>
    <string name="detail">Detail</string>
    <string name="about">About</string>
    <string name="logo">Logo</string>
    <string name="Movie">Movie</string>
    <string name="overview">Overview</string>
    <string name="get_back_drop">Get Back-Drop</string>
    <string name="date">29/12/2000</string>
    <string name="favourite">Favorite</string>
    <string name="favorited">Favorited</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="message_release_today">Has been Released Today</string>
    <string name="message_daily_remainder">Let\'s Watch it</string>
    <string name="search_movie">Search Movie</string>
    <string name="search_tv_show">Search Tv Show</string>
    <string name="empty">Empty</string>
    <string name="notification_format_message">%s has been released today\\n</string>
</resources>
