<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_language" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/set_reminder"/>
    </group>

    <item android:title="@string/info">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_fav"
                android:icon="@drawable/ic_favorite_black_24dp"
                android:title="@string/favourite"/>
            <item
                android:id="@+id/nav_search_movie"
                android:icon="@drawable/ic_local_movies_black_24dp"
                android:title="@string/search_movie"/>
            <item
                android:id="@+id/nav_search_tv"
                android:icon="@drawable/ic_tv_black_24dp"
                android:title="@string/search_tv_show"/>
        </menu>
    </item>

</menu>
