<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/movie_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        android:text="@string/overview"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_pop" />

    <TextView
        android:id="@+id/movie_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:padding="10dp"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="@color/colorBlack"
        android:background="@color/forOverView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_description"
        tools:text="@tools:sample/lorem" />


    <TextView
        android:id="@+id/movie_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/movie_rate"
        app:layout_constraintStart_toStartOf="@+id/movie_rate"
        app:layout_constraintTop_toBottomOf="@+id/movie_rate"
        tools:text="7.5/10" />

    <TextView
        android:id="@+id/movie_pop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_popular"
        app:layout_constraintStart_toStartOf="@+id/img_popular"
        app:layout_constraintTop_toBottomOf="@+id/img_popular"
        tools:text="456.547" />

    <TextView
        android:id="@+id/movie_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_date"
        app:layout_constraintStart_toStartOf="@+id/img_date"
        app:layout_constraintTop_toBottomOf="@+id/img_date" />

    <ImageView
        android:id="@+id/movie_rate"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_star_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/img_popular"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/title_movies" />

    <ImageView
        android:id="@+id/img_date"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_date_range_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_popular"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/title_movies" />

    <ImageView
        android:id="@+id/img_popular"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_favorite_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/title_movies" />

    <Button
        android:id="@+id/btn_movie_fav"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/favourite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_overview" />
</androidx.constraintlayout.widget.ConstraintLayout>